[package]
name = "jit"
version = "0.1.0"
authors = ["Andy Freeland <andy@andyfreeland.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = "0.9.6"
uuid = { version = "0.8", features = ["v4"] }
flate2 = "1.0.20"
hex = { version = "0.4.3", features = ["alloc"] }
chrono = "0.4.19"
anyhow = "1.0.40"
thiserror = "1.0.25"

[dev-dependencies]
tempfile = "3.2.0"
rand = "0.8.3"
assert_cmd = "1.0.4"
filetime = "0.2.14"
