[package]
name = "jit"
version = "0.1.0"
authors = ["Andy Freeland <andy@andyfreeland.net>"]
edition = "2018"
default-run = "jit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
atty = "0.2.14"
chrono = "0.4.19"
colored = "2.0.0"
flate2 = "1.0.20"
hex = { version = "0.4.3", features = ["alloc"] }
itertools = "0.10.0"
lazy_static = "1.4.0"
nix = "0.21.0"
regex = "1.5.4"
sha-1 = "0.9.6"
structopt = "0.3.21"
thiserror = "1.0.25"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
assert_cmd = "1.0.4"
filetime = "0.2.14"
rand = "0.8.4"
rstest = "0.10.0"
tempfile = "3.2.0"
