[package]
name = "jit"
version = "0.1.0"
authors = ["Andy Freeland <andy@andyfreeland.net>"]
edition = "2021"
default-run = "jit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
atty = "0.2.14"
chrono = "0.4.19"
clap = { version = "3.1.2", features = ["derive"] }
colored = "2.0.0"
dirs = "4.0.0"
flate2 = "1.0.20"
hex = { version = "0.4.3", features = ["alloc"] }
indexmap = "1.8.0"
itertools = "0.10.0"
lazy_static = "1.4.0"
libc = "0.2.99"
nix = "0.24.1"
regex = "1.5.4"
sha-1 = "0.10.0"
shlex = "1.0.0"
thiserror = "1.0.25"
uuid = { version = "1.1.2", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0.0"
filetime = "0.2.14"
is_executable = "1.0.1"
matches = "0.1.9"
rand = "0.8.4"
rstest = "0.15.0"
tempfile = "3.2.0"
